Add logo to title bar and staff sidebar; size with CSS

--- a/staff-customers.html
+++ b/staff-customers.html
@@ -283,6 +283,7 @@
         <div class="nav-logo">
             <h2>Emily Bakes Cakes</h2>
             <p class="nav-subtitle">Staff Portal</p>
+               <img src="public/ebc-cake-images/logo.svg" alt="Emily Bakes Cakes logo">
         </div>
         <ul class="nav-menu">
             <li><a href="dashboard.html" class="nav-link">
