--- a/staff-products.html
+++ b/staff-products.html
@@ -423,7 +423,8 @@
         <!-- Sidebar Navigation -->
         <div class="sidebar">
             <div class="sidebar-header">
-                <h2>Emily Bakes Cakes</h2>
+                    <img src="public/ebc-cake-images/logo.svg" alt="Emily Bakes Cakes logo">
+                    <h2>Emily Bakes Cakes</h2>
                 <p>Staff Portal</p>
             </div>
 
