--- a/staff-settings.html
+++ b/staff-settings.html
@@ -13,6 +13,7 @@
     <!-- Left Navigation Bar -->
     <nav class="staff-nav">
         <div class="nav-logo">
+            <img src="public/ebc-cake-images/logo.svg" alt="Emily Bakes Cakes logo">
             <h2>Emily Bakes Cakes</h2>
             <p class="nav-subtitle">Staff Portal</p>
         </div>
