Replace top emoji with site logo (64x64) on forgot-password page

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -155,7 +155,12 @@
     <div class="container">
         <!-- Logo/Header -->
         <div class="header">
-            <div class="logo">🎂</div>
+            <a href="index.html" class="logo" aria-label="Emily Bakes Cakes">
+                <picture>
+                    <source srcset="/public/ebc-cake-images/logo.png" type="image/png">
+                    <img src="/public/ebc-cake-images/logo.svg" alt="Emily Bakes Cakes logo" width="64" height="64">
+                </picture>
+            </a>
             <h1>Emily Bakes Cakes</h1>
         </div>
 
